syntax = "proto3";

package chef.automate.domain.infra_proxy.response;
option go_package = "github.com/chef/automate/api/interservice/infra_proxy/response";

message AffectedNodes {
    // List of the nodes which are affected by the resource (e.g. 'cookbooks', 'roles').
    repeated NodeAttribute nodes = 1;
}

message NodeAttribute {
    // Name of the node.
    string name = 1;
    // ChefGUID of the node.
    string chef_guid = 2;
    // URL which point to client-runs node.
    string url = 3;
    // Last checked in of the node. 
    string check_in = 4;
    // Uptime of the node.
    string uptime = 5;
    // Name of the platform of the node.
    string platform = 6;
    // Environment name of the node.
    string environment = 7;
    // Policy group name of the node.
    string policy_group = 8;
}
